--- a/VectorGraphicsViewer/packages.config
+++ b/VectorGraphicsViewer/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="4.0.173" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="4.0.173" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net46" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
 </packages>
